# wing

./: .dockerignore  .gitignore  README_WING.md  TODO.md  WING_roadmap.md  package.json
DOCS/: COMMERCIAL_LAUNCH_ROADMAP.md  DEPLOY_VPS.md  IDENTITY_CONFIGURATION.md  MANUAL_TEST_ROTEIRO.md  PILOT_OPERATIONS.md  QUICK_MODEL_ROUTING_PLAN.md  RFC_001_Wing 1.0 Architecture Specification.md  RFC_002_Wing_Memory_Engine.md  RFC_003_Maestro_Planning_Protocol.md  RFC_004_Personas_and_Agent_Schema.md  RFC_005_Persistence_and_Index_Policy.md  RFC_006_Wing_Security_Privacy.md  RFC_007_Wing_UI_UX_Blueprint.md  RFC_008_Wing_Extensibility_API.md  RFC_009_Wing_Deployment_Spec.md  RFC_010_Wing_Enterprise_Architecture.md  RFC_011_Wing_Marketplace_Ecosystem.md  RFC_012_Wing_Security_Model.md  RFC_013_Future_Features_Incubation.md  RFC_014_Commercial_Product_Scope.md  RFC_015_Stripe_Billing_Gateway.md  RFC_016_Agents_Maestro_Retirement.md  SECURITY_PRIVACY_REVIEW.md  SYSTEM_DESING.md  visual-law-formatting-plan.md
backend/: .env.example  .env.production.example  .env.staging.example  .gitignore  Dockerfile  cert.pem  deno.json  key.pem  package.json  tsconfig.json
frontend/: .env.example  .env.production.example  .gitignore  Dockerfile  Instructions.md  README.md  Roadmap.md  eslint.config.mjs  manifest copy.xml  manifest.json  manifest.production.xml  manifest.xml  package-lock.json  package.json  tsconfig.json  webpack.config.js
site/: .env.example  Dockerfile  index.html  package-lock.json  package.json  (+1 more)
wing-memory-engine/: Cargo.toml
wing-memory-engine/src/: lib.rs
(+248 files in other folders)
