[package]
name = "wing-memory-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
candle-core = { version = "0.8.2", features = [] }
candle-nn = { version = "0.8.2" }
candle-transformers = { version = "0.8.2" }
getrandom = { version = "0.3", features = ["wasm_js"] }
serde_json = "1.0"
tokenizers = { version = "0.19.1", default-features = false, features = ["unstable_wasm"] }
bincode = "1.3"

